<resources>
    <string name="app_name">MOMENTI</string>

    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <string name="your_daily_growth_one_step_at_a_time">Your Daily Guide to Living With \nPurpose &amp; Presence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="momenti">MOMENTI</string>
    <string name="stay_accountable_grow_daily_and_track_gratitude">Stay accountable, grow daily, \nand track gratitude.</string>
    <string name="set_up_your_username_password_you_can_change_it_later">Set up your username password. \nYou can change it later.</string>
    <string name="we_have_sent_4_digit_code_to_your_email">We have sent 4 digit code to your email</string>
    <string name="take_a_moment_to_reflect_on_the_good_today">Take a moment to reflect on \nthe good today</string>
    <string name="account_created_successfully">Account Created \nSuccessfully</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_the_email_address_associated_with_your_account">Please enter the email address \nassociated with your account</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password_different_for_the_old_password">Enter new password different for \nthe old password.</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="gratitude">Gratitude</string>
    <string name="tasks">Tasks</string>
    <string name="you_can_add_task_for_future_days_we_will_notify_you">You can add task for future days \nwe will notify you</string>
    <string name="add_task">Add task</string>
    <string name="add_task_for">Add task for</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="message_preview_when_your_share_it_with_friends">Message preview when your share it with friends:</string>
    <string name="task_added_on">Task added on :</string>
    <string name="streak">Streak</string>
    <string name="total_task_added">Total Task Added</string>
    <string name="life_balance_insight">Life Balance Insight</string>
    <string name="gratitude_summary">Gratitude summary</string>
    <string name="entries_this_week">Entries this week</string>
    <string name="skipped_days">Skipped Days</string>
    <string name="your_ai_coach">Your AI Coach</string>
    <string name="daily_reflection">Daily Reflection</string>
    <string name="awesome_focus">Awesome focus</string>
    <string name="you_completed_4_5_tasks_today">You completed 4/5 tasks today</string>
    <string name="add_to_tomorrow_s_power_list">Add to Tomorrow’s \nPower List</string>
    <string name="health_seem_low_this_week_suggestion_add_a_10_min_walk_tomorrow">Health seem low this week. \nSuggestion: Add a 10-min walk tomorrow?</string>
    <string name="notification">Notification</string>
    <string name="select_date">Select date</string>
    <string name="a_simple_powerful_tool_to_help_focus_on_what_matters_take_meaningful_action_and_appreciate_the_life_you_re_living">A simple, powerful tool to help focus on what matters, take meaningful action, and appreciate the life you’re living.</string>
    <string name="next">Next</string>
    <string name="best_balance_of_value_commitment"><![CDATA[Best balance of value & commitment.]]></string>
    <string name="stay_consistent_with_simple_monthly_access">Stay consistent with simple monthly access.</string>
    <string name="annual">Annual</string>
    <string name="monthly">Monthly</string>
    <string name="own_momenti_forever_with_one_payment">Own Momenti forever with one payment.</string>
    <string name="by_tagging_each_task_with_a_life_area_you_ll_see_where_your_energy_goes_and_spot_where_balance_is_missing">By tagging each task with a Life Area, you’ll see where your energy goes — and spot where balance is missing.</string>
    <string name="focus_on_what_matters_most_the_actions_that_will_move_you_forward">Focus on what matters most — the actions that will move you forward.</string>
    <string name="what_are_you_grateful_for_today">What are you grateful for today?</string>
    <string name="list_3_5_things_you_re_grateful_for_today">List 3–5 things you’re grateful for today.</string>
    <string name="focus_on_actions_that_truly_move_you_forward">Focus on actions that truly move you forward.</string>
</resources>