<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.tech.momenti.ui.auth.AuthCommonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.auth.signup.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:src="@drawable/iv_back"
        android:onClick="@{v -> vm.onClick(v)}"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appName"
        style="@style/TextView_600_SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/momenti"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dailyGratitude"
        style="@style/TextView_400_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_20ssp"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/please_enter_the_email_address_associated_with_your_account"
        app:layout_constraintTop_toBottomOf="@id/dailyGratitude"
        app:layout_constraintStart_toStartOf="@id/dailyGratitude"
        app:layout_constraintEnd_toEndOf="@id/dailyGratitude"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consMain"
        android:background="@drawable/card_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/TextView_400_Regular"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/radius_border_gray"
            android:gravity="start|center"
            android:textSize="@dimen/_14ssp"
            android:hint="Enter Email"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/saveBtn"
            style="@style/TextView_400_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:onClick="@{v -> vm.onClick(v)}"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>