<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.tech.momenti.ui.auth.AuthCommonVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.auth.signup.NewPasswordFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:src="@drawable/iv_back"
        android:onClick="@{v -> vm.onClick(v)}"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appName"
        style="@style/TextView_600_SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/momenti"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dailyGratitude"
        style="@style/TextView_400_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_black"
        android:textSize="@dimen/_20ssp"
        android:text="@string/enter_new_password"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/enter_new_password_different_for_the_old_password"
        app:layout_constraintTop_toBottomOf="@id/dailyGratitude"
        app:layout_constraintStart_toStartOf="@id/dailyGratitude"
        app:layout_constraintEnd_toEndOf="@id/dailyGratitude"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consMain"
        android:background="@drawable/card_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/TextView_400_Regular"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/radius_border_gray"
            android:gravity="start|center"
            android:textSize="@dimen/_14ssp"
            android:hint="Enter Password"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showPassword"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/iv_hide_eye"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            style="@style/TextView_400_Regular"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/radius_border_gray"
            android:gravity="start|center"
            android:textSize="@dimen/_14ssp"
            android:hint="Confirm Password"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showConfirmPassword"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/iv_hide_eye"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
            app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/continueBtn"
            style="@style/TextView_400_Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:onClick="@{v -> vm.onClick(v)}"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>