<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.tech.momenti.ui.your_ai_coach.YourAiCoachVm" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.your_ai_coach.YourAiCoachFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:src="@drawable/iv_back"
            android:onClick="@{v -> vm.onClick(v)}"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading"
            style="@style/TextView_400_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your AI Coach"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNotification"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:onClick="@{v -> vm.onClick(v)}"
            android:src="@drawable/iv_notification_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDailyReflection"
            style="@style/TextView_500_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/app_black"
            android:text="@string/daily_reflection"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consFocus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/consAddPowerList"
            android:background="@drawable/bg_gradient_yellow"
            app:layout_constraintTop_toBottomOf="@id/tvDailyReflection"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStar"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/iv_star"
                app:tint="@color/app_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
    
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAwesomeFocus"
                style="@style/TextView_500_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awesome_focus"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/app_black"
                app:layout_constraintTop_toBottomOf="@id/ivStar"
                app:layout_constraintStart_toStartOf="@id/ivStar"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTaskDetail"
                style="@style/Textview_Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/you_completed_4_5_tasks_today"
                app:layout_constraintTop_toBottomOf="@id/tvAwesomeFocus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consAddPowerList"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="0dp"
            android:background="@drawable/bg_add_power_list"
            app:layout_constraintStart_toEndOf="@id/consFocus"
            app:layout_constraintTop_toTopOf="@id/consFocus"
            app:layout_constraintBottom_toBottomOf="@id/consFocus"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAdd"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/iv_add_icon"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddTo"
                style="@style/Textview_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_tomorrow_s_power_list"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/app_black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/ivAdd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLifeBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:background="@drawable/radius_border_gray"
            app:layout_constraintTop_toBottomOf="@id/consFocus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLifeBalanceInsight"
                style="@style/Textview_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_balance_insight"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/app_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/dropDownLifeBalance"
                app:layout_constraintBottom_toBottomOf="@id/dropDownLifeBalance"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dropDownLifeBalance"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/iv_down_arrow"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/bg_drop_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLifeBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dropDownLifeBalance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_view"
            android:backgroundTint="@color/gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/consLifeBalance"
            app:layout_constraintStart_toStartOf="@id/consLifeBalance"
            app:layout_constraintEnd_toEndOf="@id/consLifeBalance">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/starDes"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/iv_star"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                style="@style/Textview_Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/health_seem_low_this_week_suggestion_add_a_10_min_walk_tomorrow"
                app:layout_constraintTop_toTopOf="@id/starDes"
                app:layout_constraintStart_toEndOf="@id/starDes"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="@color/app_black"
            android:background="@drawable/bg_streks"
            app:layout_constraintTop_toBottomOf="@id/consDes"
            app:layout_constraintStart_toStartOf="@id/consDes"
            app:layout_constraintEnd_toEndOf="@id/consDes">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivReminderStar"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/iv_star"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGratReminder"
                style="@style/TextView_500_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gratitude Reminder"
                android:textColor="@color/yellow"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@id/ivReminderStar"
                app:layout_constraintStart_toStartOf="@id/ivReminderStar"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gratitudeTrack"
                style="@style/Textview_Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You wrote 2 gratitude entries this week."
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGratReminder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consDailyReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_view"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/consReminder"
            app:layout_constraintStart_toStartOf="@id/consReminder"
            app:layout_constraintEnd_toEndOf="@id/consReminder">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDailyReminder"
                style="@style/Textview_Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@id/switchVisibility"
                android:text="Want to set a daily reminder to reflect?"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchVisibility"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:thumb="@drawable/thum_background"
                app:layout_constraintTop_toTopOf="@id/tvDailyReminder"
                app:layout_constraintBottom_toBottomOf="@id/tvDailyReminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:track="@drawable/track_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>